[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy.png" type="Texture" id=2]
[ext_resource path="res://audio/hitHurt (1).wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 7 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.51469

[node name="enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8.5, -5.5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, -6.25 )
scale = Vector2( 0.75, 0.725 )

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2( -1.5, -3.5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 1, -3.5 )
shape = SubResource( 2 )

[node name="bullet_touch" type="Area2D" parent="."]
position = Vector2( -1.5, -3.5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bullet_touch"]
position = Vector2( 1, -3.5 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 1.31951

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="bullet_touch" to="." method="_on_Area2D2_body_entered"]
